<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5CFF1"
    android:orientation="vertical"
    tools:context=".Home">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="331dp"
        android:layout_height="282dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="16dp" />

    <LinearLayout
        android:layout_width="414dp"
        android:layout_height="81dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="-3dp"
        android:layout_marginBottom="-14dp"
        android:background="#3F51B5"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="663dp">


        <ImageButton
            android:id="@+id/camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#00FFFFFF"
            android:src="@drawable/scan" />



    </LinearLayout>
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/kamus"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/button_rounded" />

    <ImageButton
        android:id="@+id/game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="232dp"
        android:background="#3F51B5"
        android:contentDescription="@string/Game"
        app:srcCompat="@drawable/game"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="323dp" />

    <ImageButton
        android:id="@+id/kamus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="232dp"
        android:background="#3F51B5"
        android:contentDescription="@string/Kamus"
        app:srcCompat="@drawable/kamus"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="323dp" />

    <ImageButton
        android:id="@+id/taks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="230dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/Taks"
        app:srcCompat="@drawable/taks"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="293dp"
        tools:layout_editor_absoluteY="323dp" />

    <ImageButton
        android:id="@+id/forum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="284dp"
        android:layout_marginEnd="39dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/Forum"
        app:srcCompat="@drawable/forum"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="446dp" />

    <ImageButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="286dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/Add"
        app:srcCompat="@drawable/kata"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="293dp"
        tools:layout_editor_absoluteY="446dp" />

    <ImageButton
        android:id="@+id/isyarat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerInParent="true"
        android:layout_marginStart="43dp"
        android:background="#03FFFFFF"
        android:contentDescription="@string/Isyrat"
        app:srcCompat="@drawable/isyarat"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="446dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="logo,game,kamus,taks,forum,add,isyarat" />



</RelativeLayout>